--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "actions-on-google": "^2.13.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.18"
