--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "actions-on-google": "^2.13.0",
+    "axios": "^0.21.1",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "mongoose": "^5.11.18"
